--- a/www/views/submissions.html
+++ b/www/views/submissions.html
@@ -75,8 +75,8 @@
             <tr>
                <th>ID</th>
                <th>Form Name</th>
-               <th>Experiencia</th>
-               <th>Repetir</th>
+               <th>Experience</th>
+               <th>Repeat</th>
                <th>Comentarios</th>
             </tr>
 
