--- a/www/views/dashboard.html
+++ b/www/views/dashboard.html
@@ -32,7 +32,7 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="panel panel-default">
-          <div class="panel-heading">Experiencia</div>
+          <div class="panel-heading">Experience</div>
           <div class="panel-body">
             <canvas class="chart chart-pie"
               chart-data="experienciaData" chart-labels="experienciaLabels" chart-options="options"
@@ -43,7 +43,7 @@
       </div>
       <div class="col-sm-6">
         <div class="panel panel-default">
-          <div class="panel-heading">Repetiría</div>
+          <div class="panel-heading">Would you repeat</div>
           <div class="panel-body">
             <canvas class="chart chart-pie"
               chart-data="repetirData" chart-labels="repetirLabels" chart-options="options">
