--- a/www/views/submissions.html
+++ b/www/views/submissions.html
@@ -34,7 +34,7 @@
     <tr >
       <td class="span6">
         <div class="panel panel-default">
-          <div class="panel-heading">Experiencia</div>
+          <div class="panel-heading">Experience</div>
           <div class="panel-body">
             <canvas class="chart chart-pie"
               chart-data="experienciaData" chart-labels="experienciaLabels" chart-options="options">
@@ -44,7 +44,7 @@
       </td>
       <td class="span6">
         <div class="panel panel-default">
-          <div class="panel-heading">Repetiría</div>
+          <div class="panel-heading">Would you repeat?</div>
           <div class="panel-body">
             <canvas class="chart chart-pie"
               chart-data="repetirData" chart-labels="repetirLabels" chart-options="options">
