--- a/www/views/dashboard.html
+++ b/www/views/dashboard.html
@@ -7,7 +7,7 @@
       </button>
       <div class="row top-buffer">
         <div class="col-sm-12" style="float: none; margin: 0 auto;">
-          <img href="#page-top" src="./images/admin-portal-355x105-logo.png" class="img-thumbnail" alt="Digital Enterprise 2016 logo" width="355" height="105">
+          <img href="#page-top" src="./images/admin-portal-355x105-logo.png" class="img-thumbnail" alt="Red Hat Logo" width="355" height="105">
         </div>
       </div>
   </div>
