--- a/www/views/dashboard.html
+++ b/www/views/dashboard.html
@@ -43,7 +43,7 @@
       </div>
       <div class="col-sm-6">
         <div class="panel panel-default">
-          <div class="panel-heading">Would you repeat</div>
+          <div class="panel-heading">Would you repeat?</div>
           <div class="panel-body">
             <canvas class="chart chart-pie"
               chart-data="repetirData" chart-labels="repetirLabels" chart-options="options">
