toggle forms API - mongodb fixed

--- a/www/views/dashboard.html
+++ b/www/views/dashboard.html
@@ -30,6 +30,14 @@
     <div class="row top-buffer">
     </div>
     <div class="row">
+      <div class="col-sm-12">
+      <div class="btn-group" role="group" aria-label="...">
+        <button type="button" class="btn btn-default" ng-click="toogleSourceToBackend()">Backend</button>
+        <button type="button" class="btn btn-default" ng-click="toogleSourceToForms()">Forms</button>
+      </div>
+    </div>
+    </div>
+    <div class="row">
       <div class="col-sm-6">
         <div class="panel panel-default">
           <div class="panel-heading">Experience</div>
