Fixing interval problems

--- a/www/views/dashboard.html
+++ b/www/views/dashboard.html
@@ -24,7 +24,7 @@
                 <a href="#contact">Contact</a>
             </li>
             <li class="page-scroll">
-                <a href="#list">Go to list</a>
+                <a ng-click="goto('list')">Go to list</a>
             </li>
         </ul>
     </div>
