--- a/www/views/list.html
+++ b/www/views/list.html
@@ -24,7 +24,7 @@
                 <a href="#contact">Contact</a>
             </li>
             <li class="page-scroll">
-                <a href="#dashboard">Go to dasboard</a>
+                <a ng-click="goto('dashboard')">Go to dasboard</a>
             </li>
         </ul>
     </div>
